<resources>
    <string name="app_name">Hardware Track</string>
    <string name="btn_main_computer">Computers</string>
    <string name="btn_main_cpu">CPUs</string>
    <string name="btn_main_gpu">GPUs</string>
    <string name="btn_main_ram">RAM</string>
    <string name="btn_main_drive">Drives</string>
    <string name="btn_computer_add">Add Computer</string>
    <string name="btn_cpu_add">Add CPU</string>
    <string name="btn_gpu_add">Add GPU</string>
    <string name="btn_drive_add">Add Drive</string>
    <string name="btn_ram_add">Add RAM</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_home">Home</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="core_count">Core Count</string>
    <string name="thread_count">Thread Count</string>
    <string name="base_clock">Base Clock</string>
    <string name="boost_clock">Boost Clock</string>
    <string name="form_factor">Form Factor</string>
    <string name="capacity">Storage Capacity</string>
    <string name="ram_capacity">Capacity</string>
    <string name="transfer_protocol">Transfer Protocol</string>
    <string name="max_transfer_rate">Max Transfer Rate</string>
    <string name="speed">Speed</string>
    <string name="ghz">GHz</string>
    <string name="mhz">MHz</string>
    <string name="gb">GB</string>
    <string name="mb_per_second">MB/s</string>
    <string name="cores">Cores</string>
    <string name="threads">Threads</string>
    <string name="vram">VRAM</string>
    <string name="custom_build">Custom Build</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="drive">Drive</string>
    <string name="ram">RAM</string>
    <string name="error_manufacturer">Please enter a manufacturer</string>
    <string name="error_model">Please enter a model</string>
    <string name="error_core_count">Please enter a core count</string>
    <string name="error_value_core_count">Invalid core count</string>
    <string name="error_thread_count">Please enter a thread count</string>
    <string name="error_value_thread_count">Invalid thread count</string>
    <string name="error_base_clock">Please enter a base clock value</string>
    <string name="error_value_base_clock">Invalid base clock value</string>
    <string name="error_boost_clock">Please enter a boost clock value</string>
    <string name="error_value_boost_clock">Invalid boost clock value</string>
    <string name="error_capacity">Please enter a storage capacity</string>
    <string name="error_value_capacity">Invalid storage capacity</string>
    <string name="error_ram_capacity">Please enter a RAM capacity</string>
    <string name="error_value_ram_capacity">Invalid RAM capacity</string>
    <string name="error_vram">Please enter a VRAM configuration</string>
    <string name="error_max_transfer_rate">Please enter a max transfer rate</string>
    <string name="error_value_max_transfer_rate">Invalid max transfer rate</string>
    <string name="error_speed">Please enter a RAM speed value</string>
    <string name="error_value_speed">Invalid RAM speed value</string>
    <string name="delete_cpu_confirm">Are you sure you want to delete this CPU?</string>
    <string name="delete_drive_confirm">Are you sure you want to delete this drive?</string>
    <string name="delete_gpu_confirm">Are you sure you want to delete this GPU?</string>
    <string name="delete_ram_confirm">Are you sure you want to delete this RAM?</string>
    <string name="delete_computer_confirm">Are you sure you want to delete this PC?</string>
    <string-array name="drive_types">
        <item>SSD</item>
        <item>HDD</item>
    </string-array>
    <string-array name="drive_form_factors">
        <item>M.2</item>
        <item>2.5"</item>
        <item>3.5"</item>
        <item>Soldered</item>
    </string-array>
    <string-array name="drive_transfer_protocols">
        <item>NVMe</item>
        <item>SATA</item>
    </string-array>
    <string-array name="ram_types">
        <item>DDR3</item>
        <item>DDR4</item>
        <item>DDR5</item>
    </string-array>
    <string-array name="ram_form_factors">
        <item>DIMM</item>
        <item>SO-DIMM</item>
        <item>Soldered</item>
    </string-array>
    <string-array name="computer_types">
        <item>Laptop</item>
        <item>Desktop</item>
    </string-array>
</resources>
