<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComputerDetailsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblComputerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type" />

    <Spinner
        android:id="@+id/spComputerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/computer_types"/>

    <TextView
        android:id="@+id/lblComputerManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer" />

    <EditText
        android:id="@+id/txtComputerManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:id="@+id/lblComputerModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <EditText
        android:id="@+id/txtComputerModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions"/>

    <CheckBox
        android:id="@+id/chkCustomBuild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_build" />

    <TextView
        android:id="@+id/lblComputerCPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu" />

    <Spinner
        android:id="@+id/spComputerCPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/lblComputerGPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gpu" />

    <Spinner
        android:id="@+id/spComputerGPU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblComputerDrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drive" />

    <Spinner
        android:id="@+id/spComputerDrive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblComputerRAM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ram" />

    <Spinner
        android:id="@+id/spComputerRAM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnComputerSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnComputerDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"
        android:text="@string/btn_delete" />

</LinearLayout>