<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DriveDetailsActivity">


    <TextView
        android:id="@+id/lblDriveManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"/>

    <EditText
        android:id="@+id/txtDriveManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:id="@+id/lblDriveModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <EditText
        android:id="@+id/txtDriveModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/lblDriveType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type" />


    <Spinner
        android:id="@+id/spDriveType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/drive_types"/>

    <TextView
        android:id="@+id/lblDriveFormFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_factor"/>

    <Spinner
        android:id="@+id/spDriveFormFactor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/drive_form_factors"/>

    <TextView
        android:id="@+id/lblDriveTransferProtocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_protocol"/>

    <Spinner
        android:id="@+id/spDriveTransferProtocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/drive_transfer_protocols"/>

    <TextView
        android:id="@+id/lblDriveCapacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capacity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtDriveCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblGigabytes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/gb" />

    </LinearLayout>

    <TextView
        android:id="@+id/lblDriveMaxTransferRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_transfer_rate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtDriveMaxTransferRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblMbPerSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/mb_per_second" />

    </LinearLayout>

    <Button
        android:id="@+id/btnDriveSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnDriveDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"
        android:text="@string/btn_delete" />


</LinearLayout>