<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnAllComputers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/btn_main_computer"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAllCPUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/btn_main_cpu"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAllGPUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/btn_main_gpu"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAllRAM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/btn_main_ram"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnAllDrives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/btn_main_drive"
        android:textAllCaps="false" />

</LinearLayout>