<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GPUDetailsActivity">


    <TextView
        android:id="@+id/lblGPUUManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer"/>

    <EditText
        android:id="@+id/txtGPUManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions"/>

    <TextView
        android:id="@+id/lblGPUModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <EditText
        android:id="@+id/txtGPUModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/lblGPUCoreCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/core_count" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtGPUCoreCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/lblGPUCores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cores" />

    </LinearLayout>


    <TextView
        android:id="@+id/lblGPUBaseClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_clock" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtGPUBaseClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/lblBaseClockMhz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/mhz" />

    </LinearLayout>
    <TextView
        android:id="@+id/lblGPUBoostClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boost_clock" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtGPUBoostClock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/lblGPUBoostClockMhz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/mhz" />

    </LinearLayout>


    <TextView
        android:id="@+id/lblVRam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vram" />

    <EditText
        android:id="@+id/txtGPUVRam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions" />

    <Button
        android:id="@+id/btnGPUSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnGPUDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textColor="@color/colorRed"
        android:text="@string/btn_delete" />


</LinearLayout>